hard-gists/0ee6dd444994fd67f63b/run.log
=== Docker Run Log for 0ee6dd444994fd67f63b ===
Started at: Mi 29. Okt 11:42:58 CET 2025

[2025-10-29 11:42:58] START: Running container for 0ee6dd444994fd67f63b
[2025-10-29 11:42:58] SUCCESS: Container 3d2b3366d4ac9e31c427df89af294063a41df6c156d927daaa0a46d9ee1d7e39 started for 0ee6dd444994fd67f63b
=== Container logs for 0ee6dd444994fd67f63b ===
  File "/snippet.py", line 19
    print type(img), img.shape, type(img[0][0])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 0ee6dd444994fd67f63b ===
[2025-10-29 11:43:00] INFO: Container 3d2b3366d4ac9e31c427df89af294063a41df6c156d927daaa0a46d9ee1d7e39 has stopped
